# BachelorProject

./: CMakeCache.txt  LICENSE  README.md  build.sh  input_graph.txt  input_random_representation.txt  input_representation.txt
OpenGL/: .gitignore  CMakeLists.txt  input_graph.txt  input_random_representation.txt  input_representation.txt  main.cpp
Python/: input_graph.txt  input_random_representation.txt  input_representation.txt  project.py
